// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination next 1`] = `
<a
  className="css-83egvd-StyledAnchor eutkdkv0"
  href="#"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  <div
    className="next css-bvk2s8-Container eutkdkv1"
  >
    <div
      className="css-195yjlt-ArrowDiv eutkdkv2"
    >
      NEXT
      <img
        alt="Next"
        className="css-a41acm-ArrowIcon eutkdkv3"
        src="test-image-stub"
      />
    </div>
    <span>
      Step 2: Add a funding source
    </span>
  </div>
</a>
`;

exports[`Pagination previous 1`] = `
<a
  className="css-83egvd-StyledAnchor eutkdkv0"
  href="#"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  <div
    className="previous css-bvk2s8-Container eutkdkv1"
  >
    <div
      className="css-195yjlt-ArrowDiv eutkdkv2"
    >
      <img
        alt="Previous"
        className="css-a41acm-ArrowIcon eutkdkv3"
        src="test-image-stub"
      />
      PREVIOUS
    </div>
    <span>
      Step 1: Creating Business Verified Customers
    </span>
  </div>
</a>
`;
